# prefect-docker

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
prefect_docker/: __init__.py  core.py
tests/: test_core.py
